objects/Loan_Ops_Questionnaire__c.object
<CustomObject>
    <description>Loan Ops Questionnaire used by C&amp;I.</description>
    <fields>
        <fullName>Addl_LOQ_Options__c</fullName>
        <label>8. Select all that apply:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Agent</fullName>
                </value>
                <value>
                    <fullName>Bridge A&amp;D</fullName>
                </value>
                <value>
                    <fullName>Bridge IR Requirement</fullName>
                </value>
                <value>
                    <fullName>Committed loan</fullName>
                </value>
                <value>
                    <fullName>Construction financing</fullName>
                </value>
                <value>
                    <fullName>Fund Control</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Bridge Interest Reverse Requirement</fullName>
                    <isActive>false</isActive>
                    <label>Bridge Interest Reverse Requirement</label>
                </value>
                <value>
                    <fullName>Participation</fullName>
                    <isActive>false</isActive>
                    <label>Participation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovalSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with trigger/approval to verify fields required for approval are not null.</description>
        <label>ApprovalSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boarding_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Boarding Form</label>
        <referenceTo>Boarding_Form__c</referenceTo>
        <relationshipLabel>Loan Ops Questionnaires</relationshipLabel>
        <relationshipName>Loan_Ops_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Borrower_Relationship__c</fullName>
        <label>4. Borrower to collateral relationship:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Participation</fullName>
                </value>
                <value>
                    <fullName>Lender Participation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>RE Acquisition</fullName>
                    <isActive>false</isActive>
                    <label>RE Acquisition</label>
                </value>
                <value>
                    <fullName>RE Construction</fullName>
                    <isActive>false</isActive>
                    <label>RE Construction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_I_Loan_Type__c</fullName>
        <label>C&amp;I Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1A</fullName>
                </value>
                <value>
                    <fullName>1B</fullName>
                </value>
                <value>
                    <fullName>1C</fullName>
                </value>
                <value>
                    <fullName>1D</fullName>
                </value>
                <value>
                    <fullName>1E</fullName>
                </value>
                <value>
                    <fullName>1F</fullName>
                </value>
                <value>
                    <fullName>5A</fullName>
                </value>
                <value>
                    <fullName>5B</fullName>
                </value>
                <value>
                    <fullName>5C</fullName>
                </value>
                <value>
                    <fullName>5D</fullName>
                </value>
                <value>
                    <fullName>5E</fullName>
                </value>
                <value>
                    <fullName>5F</fullName>
                </value>
                <value>
                    <fullName>5G</fullName>
                </value>
                <value>
                    <fullName>5J</fullName>
                </value>
                <value>
                    <fullName>5L</fullName>
                </value>
                <value>
                    <fullName>5M</fullName>
                </value>
                <value>
                    <fullName>5N</fullName>
                </value>
                <value>
                    <fullName>5P</fullName>
                </value>
                <value>
                    <fullName>5R</fullName>
                </value>
                <value>
                    <fullName>5S</fullName>
                </value>
                <value>
                    <fullName>5T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Report_Code__c</fullName>
        <label>Call Report Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1C2A</fullName>
                </value>
                <value>
                    <fullName>1A1</fullName>
                </value>
                <value>
                    <fullName>1D</fullName>
                </value>
                <value>
                    <fullName>1A2</fullName>
                </value>
                <value>
                    <fullName>1E2</fullName>
                </value>
                <value>
                    <fullName>4A</fullName>
                </value>
                <value>
                    <fullName>6D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Code_Description__c</fullName>
        <label>Collateral Code/Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>110 - SFR Construction</fullName>
                </value>
                <value>
                    <fullName>120 - MF Construction</fullName>
                </value>
                <value>
                    <fullName>130 - CRE Construction</fullName>
                </value>
                <value>
                    <fullName>160 - Real Estate - Raw Lots and Land</fullName>
                </value>
                <value>
                    <fullName>400 - Business-Unsecured</fullName>
                </value>
                <value>
                    <fullName>441 - Business Secured by Non-Real Estate Collateral</fullName>
                </value>
                <value>
                    <fullName>501 - SFR Notes</fullName>
                </value>
                <value>
                    <fullName>502 - SFR NPL</fullName>
                </value>
                <value>
                    <fullName>503 - SFR Tax Liens</fullName>
                </value>
                <value>
                    <fullName>504 - MF Notes</fullName>
                </value>
                <value>
                    <fullName>505 - MF NPL</fullName>
                </value>
                <value>
                    <fullName>506 - MF Tax Liens</fullName>
                </value>
                <value>
                    <fullName>507 - CRE Notes</fullName>
                </value>
                <value>
                    <fullName>508 - CRE NPL</fullName>
                </value>
                <value>
                    <fullName>509 - CRE Tax Liens</fullName>
                </value>
                <value>
                    <fullName>510 - Health Care</fullName>
                </value>
                <value>
                    <fullName>511 - SFR Direct</fullName>
                </value>
                <value>
                    <fullName>512 - MF Direct</fullName>
                </value>
                <value>
                    <fullName>513 - CRE Direct</fullName>
                </value>
                <value>
                    <fullName>620 - Consumer Note, Unsecured</fullName>
                </value>
                <value>
                    <fullName>621 - Consumer, New Cars</fullName>
                </value>
                <value>
                    <fullName>622 - Consumer, Used Cars</fullName>
                </value>
                <value>
                    <fullName>640 - Consumer, Secured by Other Collateral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Secured__c</fullName>
        <label>5. Is collateral?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secured</fullName>
                </value>
                <value>
                    <fullName>Unsecured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Type_RE__c</fullName>
        <label>7. If RE, collateral type?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notes</fullName>
                </value>
                <value>
                    <fullName>NPL</fullName>
                </value>
                <value>
                    <fullName>Tax Lines</fullName>
                </value>
                <value>
                    <fullName>Recorded Mortgage</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>1. Collateral Type:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Business Loans</fullName>
                </value>
                <value>
                    <fullName>Consumer Loans</fullName>
                </value>
                <value>
                    <fullName>Account/Lease Receivable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Team_Member_1__c</fullName>
        <description>Team Members on corresponding Opportunity</description>
        <label>Deal Team Member 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deal_Team_Member_2__c</fullName>
        <description>Team Members on corresponding Opportunity</description>
        <label>Deal Team Member 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deal_Team_Member_3__c</fullName>
        <description>Team Members on corresponding Opportunity</description>
        <label>Deal Team Member 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FlagNotification_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This fiels is used into SubmmitalSuccessfulNotification lightning component</description>
        <label>FlagNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <description>Hidden field to capture the email address of the user who submitted the LOQ for approval</description>
        <label>Initial Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Type__c</fullName>
        <label>3. Interest Rate Type:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustable</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOQ_Status__c</fullName>
        <description>Change in field values is controlled by approval process</description>
        <label>LOQ Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LOQ In Progress</fullName>
                    <default>true</default>
                    <label>LOQ In Progress</label>
                </value>
                <value>
                    <fullName>LOQ Submitted for approval</fullName>
                </value>
                <value>
                    <fullName>LOQ Approved</fullName>
                </value>
                <value>
                    <fullName>LOQ Rejected</fullName>
                </value>
                <value>
                    <fullName>LOQ Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_by_Role__c</fullName>
        <formula>LastModifiedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldLOQStatus__c</fullName>
        <description>Save the Olv LOQ Status</description>
        <label>OldLOQStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppLink__c</fullName>
        <description>Link for Opportunity in LOQ records</description>
        <formula>LEFT($Api.Partner_Server_URL_410, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))&amp;Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordType.Name</field>
                <operation>contains</operation>
                <value>C&amp;I, EQF, CRESL, Factoring, NRELF, RELF, IPL</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Loan Ops Questionnaires</relationshipLabel>
        <relationshipName>Loan_Ops_Questionnaires</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>6. If RE, property type?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFR</fullName>
                </value>
                <value>
                    <fullName>MF</fullName>
                </value>
                <value>
                    <fullName>CRE</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NPL</fullName>
                    <isActive>false</isActive>
                    <label>NPL</label>
                </value>
                <value>
                    <fullName>Notes</fullName>
                    <isActive>false</isActive>
                    <label>Notes</label>
                </value>
                <value>
                    <fullName>Tax Lines</fullName>
                    <isActive>false</isActive>
                    <label>Tax Lines</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_Code__c</fullName>
        <label>Purpose Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 - Lender Finance</fullName>
                </value>
                <value>
                    <fullName>31 - Bridge/A and D</fullName>
                </value>
                <value>
                    <fullName>34 - Farmland</fullName>
                </value>
                <value>
                    <fullName>35 - Participation</fullName>
                </value>
                <value>
                    <fullName>36 - Lender Finance Participation</fullName>
                </value>
                <value>
                    <fullName>37 - Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC2_24hReminderDate__c</fullName>
        <label>SFDC2 24h Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <label>2. Term Type:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Revolving LOC</fullName>
                </value>
                <value>
                    <fullName>Straight LOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan Ops Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Collateral_Type__c</columns>
        <columns>Term_Type__c</columns>
        <columns>Interest_Rate_Type__c</columns>
        <columns>Borrower_Relationship__c</columns>
        <columns>Collateral_Secured__c</columns>
        <columns>Property_Type__c</columns>
        <columns>Collateral_Type_RE__c</columns>
        <columns>Addl_LOQ_Options__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Loan_Ops_Manager_Queue_Loan_Ops_Questionnaire</fullName>
        <filterScope>Queue</filterScope>
        <label>Loan Ops Manager Queue</label>
        <queue>Loan_Ops_Manager_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LOQ{000000}</displayFormat>
        <label>LOQ ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Ops Questionnaires</pluralLabel>
    <recordTypes>
        <fullName>LOQ</fullName>
        <active>true</active>
        <label>LOQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOQ_SubmmitedForApproval</fullName>
        <active>true</active>
        <description>This RT is for update the pageLayout</description>
        <label>LOQ-SubmmitedForApproval</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approved</fullName>
        <active>true</active>
        <description>Restrict field edits when Status is LOQ Approved. Only Julie can update a record</description>
        <errorConditionFormula>AND(
 TEXT(LOQ_Status__c) = &quot;LOQ Approved&quot;,
 NOT(
  OR(
   $Profile.Name = &quot;System Administrator&quot;, 
   $Profile.Name = &quot;API Service Account&quot;, 
   $UserRole.Name = &quot;C&amp;I Manager - Loan Operations&quot; 
  )
 ),
 OR(
  ISCHANGED(Opportunity__c),
  ISCHANGED(C_I_Loan_Type__c),
  ISCHANGED(Purpose_Code__c),
  ISCHANGED(Collateral_Code_Description__c),
  ISCHANGED(Call_Report_Code__c),   
  ISCHANGED(Collateral_Type__c),
  ISCHANGED(Collateral_Secured__c),
  ISCHANGED(Property_Type__c),
  ISCHANGED(Collateral_Type_RE__c),
  ISCHANGED(Borrower_Relationship__c),
  ISCHANGED(Term_Type__c),
  ISCHANGED(Interest_Rate_Type__c),
  ISCHANGED(Addl_LOQ_Options__c)
 )
)</errorConditionFormula>
        <errorMessage>Your profile is not able to make changes to the LOQ once it has been marked as Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LOQ_Loan_Ops_Only_can_edit_top_section</fullName>
        <active>true</active>
        <description>Only Julie can edit that section</description>
        <errorConditionFormula>AND(
NOT(
OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;API Service Account&quot;,
$UserRole.Name = &quot;C&amp;I Manager - Loan Operations&quot;
)
),
OR(
ISCHANGED(C_I_Loan_Type__c),
ISCHANGED(Purpose_Code__c),
ISCHANGED(Collateral_Code_Description__c ),
ISCHANGED(Call_Report_Code__c )
)
)</errorConditionFormula>
        <errorMessage>Only Loan Operations can fill in the top section of the LOQ.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LOQ_PreApproval_Check</fullName>
        <active>true</active>
        <description>Checks to make sure all necessary fields are filled in</description>
        <errorConditionFormula>AND(
NOT( 
OR( 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;API Service Account&quot;, 
$UserRole.Name = &quot;C&amp;I Manager - Loan Operations&quot; 
) 
), 
OR(
ISPICKVAL(Collateral_Type__c,&quot;&quot; ),
ISPICKVAL( Term_Type__c ,&quot;&quot; ),
ISPICKVAL( Interest_Rate_Type__c ,&quot;&quot; ),
ISPICKVAL( Borrower_Relationship__c ,&quot;&quot; ),
ISPICKVAL( Collateral_Secured__c ,&quot;&quot; ),
ISPICKVAL( Property_Type__c ,&quot;&quot; ),
ISPICKVAL( Collateral_Type_RE__c ,&quot;&quot; ),
ISBLANK(Addl_LOQ_Options__c)
)
,
OR( 
ISPICKVAL(LOQ_Status__c, &quot;LOQ Submitted for approval&quot;),
ISPICKVAL(LOQ_Status__c, &quot;LOQ Approved&quot;)
)
)</errorConditionFormula>
        <errorMessage>All 8 LOQ questions must be answered before submitting to Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Submitted_for_Approval</fullName>
        <active>true</active>
        <description>Restrict field edits when Status is LOQ Submitted for approval</description>
        <errorConditionFormula>AND(
 TEXT(LOQ_Status__c) = &quot;LOQ Submitted for approval&quot;,
 NOT(
  OR(
   $Profile.Name = &quot;System Administrator&quot;,
   $Profile.Name = &quot;API Service Account&quot;,
   $UserRole.Name  = &quot;C&amp;I Manager - Loan Operations&quot;
  )
 ),
 OR(
  ISCHANGED(Collateral_Type__c),
  ISCHANGED(Collateral_Secured__c),
  ISCHANGED(Property_Type__c),
  ISCHANGED(Collateral_Type_RE__c),
  ISCHANGED(Borrower_Relationship__c),
  ISCHANGED(Term_Type__c),
  ISCHANGED(Interest_Rate_Type__c),
  ISCHANGED(Addl_LOQ_Options__c)
 )
)</errorConditionFormula>
        <errorMessage>Your profile is not able to make changes to the &quot;Questions to BU&quot; fields once the LOQ has been submitted for approval.</errorMessage>
    </validationRules>
</CustomObject>